# rocket-sace

./: Cargo.toml  local.env
migrations/2020-06-18-001543_create_classes/: down.sql  up.sql
src/: config.rs  main.rs  schema.rs
src/majad/: models.rs  routes.rs
