[package]
name = "rockettest"
version = "0.1.0"
authors = ["Jose Gabriel Giron <jgabrielsk8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
rocket_contrib = { version = "0.4.5", features = ["json", "diesel_postgres_pool"]}
serde = { version = "1.0.112", features = ["derive"] }
serde_derive = "1.0.112"